--- a/react_portfolio/public/index.html
+++ b/react_portfolio/public/index.html
@@ -46,7 +46,22 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
+  <script>
+    bubbly({
+      colorStart: '#c5bba1',
+      colorStop: '#d5d5d5',
+      bubbles: 200,
+      blur: 1,
+      compose: 'source-over',
+      bubbleFunc: () => `hsla(${350 + Math.random() * 70}, 100%, 50%, .3)`,
+      angleFunc: () => Math.random() > 0.5 ? Math.PI : 2 * Math.PI,
+      velocityFunc: () => 1 + Math.random() * 10,
+      radiusFunc: () => Math.random() * 3
+    });
+  </script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/betterbacks@0.0.0-beta.1/dist/betterbacks.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </body>
 
