--- a/react_portfolio/public/index.html
+++ b/react_portfolio/public/index.html
@@ -35,6 +35,7 @@
 <body>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
